--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SpaceX</title>
-    <link rel="stylesheet" href="spacex.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <style>
